tests/policies/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-default-ingressclass
  namespace: ns
spec:
  rules:
  - host: example.hsot
    http:
      paths:
      - backend:
          service:
            name: example
            port:
              number: 8083
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - example-host
    secretName: example-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingressclass
  namespace: ns
spec:
  ingressClass: haproxy
  rules:
  - host: example.hsot
    http:
      paths:
      - backend:
          service:
            name: example
            port:
              number: 8083
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - example-host
    secretName: example-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-with-annotation
  namespace: ns
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: example.hsot
    http:
      paths:
      - backend:
          service:
            name: example
            port:
              number: 8083
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - example-host
    secretName: example-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-unknown-ingressclass
  namespace: ns
spec:
  ingressClass: foo
  rules:
  - host: example.hsot
    http:
      paths:
      - backend:
          service:
            name: example
            port:
              number: 8083
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - example-host
    secretName: example-tls
