tests/policies/ingress/kyverno-test.yaml
---
name: ingress-classes
resources:
- ingress.yaml
policies:
- ../../../infrastructure/base/policies/ingress.yaml
results:

# Require a valid IngressClass when present
- policy: restrict-ingress-classes
  rule: validate-ingress-class
  kind: Ingress
  result: pass
  resources:
  - example-ingressclass
  - example-default-ingressclass
- policy: restrict-ingress-classes
  rule: validate-ingress-class
  kind: Ingress
  result: fail
  resources:
  - example-unknown-ingressclass

# Stop using deprecated annotations
- policy: restrict-ingress-classes
  rule: forbid-ingress-annotations
  kind: Ingress
  result: pass
  resources:
  - example-ingressclass
  - example-default-ingressclass
- policy: restrict-ingress-classes
  rule: forbid-ingress-annotations
  kind: Ingress
  result: fail
  resources:
  - example-with-annotation
